aquiladb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: aquiladb-statefulset
  namespace: "default"
  labels:
    app: "aquiladb-app"
spec:
  selector:
    matchLabels:
      app: aquiladb-app
  serviceName: aquiladb-service
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: aquiladb-app
    spec:
      containers:
        - name: aquiladb-container
          image: ammaorg/aquiladb:latest
          ports:
            - containerPort: 50051
              name: aquiladb
          volumeMounts:
            - name: aquiladb-vol
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: aquiladb-vol
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 10Gi
