aquiladb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aquiladb
  labels:
    app: aquiladb
spec:
  ports:
  - name: http
    port: 50051
    targetPort: 50051
  selector:
    app: aquiladb
